[gd_scene load_steps=2 format=3 uid="uid://c5kwjv8h6p2xr"]

[ext_resource type="Script" path="res://src/ui/cultist_ability_bar.gd" id="1_bar"]

[node name="CultistAbilityBar" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_bar")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HeaderLabel" type="Label" parent="Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "CULTIST ABILITIES"
horizontal_alignment = 1

[node name="AbilityContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="SelectedLabel" type="Label" parent="Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Press 1-7 to select ability"
horizontal_alignment = 1

[node name="PlacementContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
visible = false
theme_override_constants/separation = 2

[node name="PlacementLabel" type="Label" parent="Panel/MarginContainer/VBox/PlacementContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "PLACING ABILITY..."
horizontal_alignment = 1

[node name="PlacementProgress" type="ProgressBar" parent="Panel/MarginContainer/VBox/PlacementContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 16)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.0
show_percentage = false

[node name="PlacementHint" type="Label" parent="Panel/MarginContainer/VBox/PlacementContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 10
text = "Stand still... Moving will cancel"
horizontal_alignment = 1
